# cursor-acp

./: Cargo.toml  LICENSE  README.md
.github/scripts/: install-musl-build-tools.sh
.github/workflows/: ci.yml  release.yml  update-homebrew-tap.yml
distribution/acp-registry/cursor-acp/: agent.json
distribution/zed-extension/: extension.toml
resources/: pty-interceptor.js
src/: acp.rs  auth.rs  error.rs  lib.rs  main.rs  prompt.rs  proxy.rs  session.rs  sessions.rs
src/cli/: mod.rs  runtime.rs
tests/: acp_protocol_integration.rs  proxy_integration.rs
tests/fixtures/stderr/: unsupported_model.stderr  workspace_trust_required.stderr
tests/fixtures/stream-json/: multi_file_edit.jsonl  plan_like.jsonl  terminal_only.jsonl  usage_long.jsonl
