[package]
name = "cursor-acp"
version = "1.0.5"
edition = "2024"
authors = ["Cursor ACP Contributors"]
license = "MIT"
description = "ACP proxy for Cursor CLI — translates Cursor-specific extensions (like todos) into standard ACP Plan updates"

[[bin]]
name = "cursor-acp"
path = "src/main.rs"

[lib]
name = "cursor_acp"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "time", "fs", "net"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[dev-dependencies]
tempfile = "3"
